# CLDE

./: .gitignore  EXPORT_RENDERING_GUIDE.md  README.md  RENDER_EXPORT_README.md  USAGE_EXAMPLE.md  settings.gradle  修复说明README.md  修复验证指南.md  导出功能实现总结.md  最终总结.md  渲染导出方案对比.md  离屏渲染功能实现总结.md  离屏渲染导出指南.md  离屏渲染快速开始.md  问题修复总结.md  问题分析报告.md
app/: build.gradle
app/src/main/assets/shaders/: equirectangularToCubemap.frag  irradiance.frag  pbr.frag  prefilter.frag  ssao.frag  ssaoGeometry.vert
app/src/main/cpp/: CMakeLists.txt  main.cpp  openxr_program.cpp  openxr_program.h
app/src/main/cpp/AREngine/: CMakeLists.txt
app/src/main/cpp/AREngine/ARInput/include/: ARInput.h
app/src/main/cpp/AREngine/ARInput/src/: ARInput.cpp
app/src/main/cpp/AREngine/Basic/include/: BasicData.h
app/src/main/cpp/AREngine/Basic/src/: App.cpp  BasicData.cpp  RPCServer.cpp
app/src/main/cpp/AREngine/CameraTracking/: CMakeLists.txt  config.json  sims.yaml
app/src/main/cpp/AREngine/CameraTracking/asset/: CMakeLists.txt  prepare_asset.sh
app/src/main/cpp/AREngine/CameraTracking/include/: CameraTracking.h  CameraTrackingServer.h  Relocalization.h  debug_utils.hpp  rvgVIOSystem.h  switch_input_pose.hpp
app/src/main/cpp/AREngine/CameraTracking/src/: CameraTracking.cpp  CameraTrackingServer.cpp
app/src/main/cpp/AREngine/HDRSwitch/: CMakeLists.txt
app/src/main/cpp/AREngine/HDRSwitch/include/: HDRSwitch.h
app/src/main/cpp/AREngine/HDRSwitch/src/: HDRSwitch.cpp
app/src/main/cpp/AREngine/InteractionLogUpload/: CMakeLists.txt
app/src/main/cpp/AREngine/InteractionLogUpload/include/: InteractionLogUpload.h
app/src/main/cpp/AREngine/InteractionLogUpload/src/: InteractionLogUpload.cpp
app/src/main/cpp/AREngine/InteractiveUnderstanding/: CMakeLists.txt
app/src/main/cpp/AREngine/InteractiveUnderstanding/include/: CollisionDetection.h  InteractionConfigLoader.h
app/src/main/cpp/AREngine/InteractiveUnderstanding/src/: AnimationPlayer.cpp  CollisionDetection.cpp  GestureUnderstanding.cpp  InteractionConfigLoader.cpp
app/src/main/cpp/AREngine/Location/include/: Location.h
app/src/main/cpp/AREngine/Location/src/: Location.cpp
app/src/main/cpp/AREngine/MarkerLocation/: CMakeLists.txt
app/src/main/cpp/AREngine/MarkerLocation/include/: MarkerLocation.h  arucopp.h  markerdetector.hpp
app/src/main/cpp/AREngine/MarkerLocation/src/: MarkerLocation.cpp
app/src/main/cpp/AREngine/PoseEstimationRokid/include/: PoseEstimationRokid.h
app/src/main/cpp/AREngine/PoseEstimationRokid/src/: PoseEstimationRokid.cpp
app/src/main/cpp/AREngine/RelocationGlass/: CMakeLists.txt
app/src/main/cpp/AREngine/RelocationGlass/include/: RelacationGlass.h
app/src/main/cpp/AREngine/RelocationGlass/src/: RelocationGlass.cpp
app/src/main/cpp/RenderingGlass/: GizmoPass.cpp  GizmoPass.h  RenderClient.cpp  RenderClient.h  SSAOGeometryPass.cpp  SSAOGeometryPass.h  SSAOPass.cpp  backgroundPass.cpp  brdfPass.cpp  brdfPass.h  equirectangularToCubemapPass.cpp  equirectangularToCubemapPass.h  irradiancePass.cpp  irradiancePass.h  pbrPass.cpp  pbrPass.h  prefilterPass.cpp  prefilterPass.h  renderMesh.cpp  renderMesh.h  renderModel.cpp  renderModel.h  shadowMappingDepthPass.cpp
app/src/main/cpp/app/: MyCollisionHandlers.h  application.cpp  scene.cpp  scene_AppVer2.cpp  scene_BuildMap.cpp  scene_CLDE.cpp  scene_MarkerLoc.cpp
app/src/main/cpp/demos/: text.cpp  text.h
app/src/main/res/values/: strings.xml
